# atom-os-kernel

./: .gitignore  ATOM-STACK-KERNEL-DESIGN.md  CROSS_DOMAIN_PRIMITIVES.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  MATH_PRIMITIVES_CATALOG.md  NOTES.md  PRACTICAL_GUIDE.md  README.md  _build_err.txt  x86_64-os.json
.cargo/: config.toml
.github/workflows/: test.yml
bootloader/: Cargo.toml  README.md
bootloader/asm/: boot.asm
bootloader/src/: main.rs
daemon/: Cargo.toml  build.rs
daemon/.cargo/: config.toml
daemon/src/: main.rs
kernel-kit/: Cargo.toml
kernel-kit/src/: atoms.rs  context.rs  elf.rs  fs.rs  gdt.rs  interrupts.rs  io.rs  keyboard.rs  lib.rs  memory.rs  page_table.rs  paging.rs  pic.rs  scheduler_glue.rs  serial.rs  slab.rs  trap.rs  vga.rs
kernel-orchestrator/: Cargo.toml
kernel-orchestrator/src/: lib.rs  salience_scheduler.rs  scheduler.rs  syscall.rs  system.rs
payload/: build.rs  linker.ld
payload/.cargo/: config.toml
payload/src/: main.rs
runner/: Cargo.toml
runner/src/: main.rs
x86_64-kernel/: Cargo.toml
x86_64-kernel/src/: main.rs
