[workspace]
members = ["bootloader",
    "daemon",
    "kernel-kit",
    "kernel-orchestrator", "payload",
    "x86_64-kernel",
]
exclude = ["runner"]
resolver = "2"

# External path dependencies pulled in by the field-substrate bridge.
# These point at the ATOM OS substrate workspace. When the kernel is cloned
# alone (without ATOM OS present), the operator must either clone ATOM OS
# alongside it or adjust these paths. See APPLY.md.
[workspace.dependencies]
field-core = { path = "../ATOM OS/substrate/field-core", default-features = false }
kernel-glue = { path = "../ATOM OS/substrate/kernel-glue", default-features = false }
libm = "0.2"
spin = { version = "0.9", default-features = false, features = ["spin_mutex"] }

[profile.dev]
panic = "abort"

[profile.release]
opt-level = 3
lto = false
panic = "abort"

[profile.release.package.bootloader]
opt-level = 1

[workspace.metadata.bootimage]
# Tell bootimage which workspace member is the kernel binary.
kernel-package = "x86_64-kernel"
